# movies_metadata

./: README.md  movies_metadata.py  pyproject.toml  setup.cfg
movies_package.egg-info/: PKG-INFO  SOURCES.txt
