[project]
name = "movies_package"
version = "1.0"
author = "Thomas Anagnostis"
author_email = "anagnostis92t@gmail.com"
#url = https://xebia.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = "Solution to movies dataset exercise"
long_description = "file: README.md"
long_description_content_type = "text/markdown"

[options]
packages_dir = .
zip_safe = True
include_package_data = True
install_requires =
    pandas == 2.2.2
    numpy  == 1.26.4
    warnings
    collections
    json
    os

[options.package_data]
movies_exercise_my_solution = "../data/movies_metadata.csv", 
* = README.md